--- a/vue_project/public/index.html
+++ b/vue_project/public/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="<%= BASE_URL %>css/reset.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link href="//at.alicdn.com/t/font_1803049_997pngappzc.css">
+    <link rel="stylesheet" href="./css/swiper.min.css">
   </head>
   <body>
     <div id="app"></div>
